force-app/main/default/objects/Job_Posting_Site__c/Job_Posting_Site__c.object-meta.xml
<CustomObject>
    <label>Job Posting Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Posting Sites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>