force-app/main/default/objects/Job_Posting_Site__c/fields/Technical_Site__c.field-meta.xml
<CustomField>
    <fullName>Technical_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Site</label>
    <type>Checkbox</type>
</CustomField>