force-app/main/default/objects/Job_Posting_Site__c/listViews/SKill_Job_Posting_Site.listView-meta.xml
<ListView>
    <fullName>SKill_Job_Posting_Site</fullName>
    <filterScope>Queue</filterScope>
    <label>Skill</label>
    <queue>Skill</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>